<resources>
    <string name="app_name">Hot Book</string>
    <string name="error_message">エラーで表示できませんでした</string>
    <string name="comment">コメント</string>
    <string name="open_browser">ブラウザで開く</string>
    <string name="share_url">共有</string>
    <string name="error_url_not_found">URLが設定されていません。</string>
    <string name="disable_javascript">このサイトのJavaScriptを無効</string>
    <string name="preference">設定</string>
    <string name="brightness">明るさを切り替える</string>
    <string name="preference_javascript">JavaScript</string>
    <string name="preference_javascript_block_list">ブロックリスト</string>
    <string name="reload">再読み込み</string>
    <string name="no_comment">コメントがありません</string>

    <plurals name="users">
        <item quantity="one">%s user</item>
        <item quantity="other">%s users</item>
    </plurals>

    <string-array name="tab_title">
        <item>総合</item>
        <item>世の中</item>
        <item>政治と経済</item>
        <item>暮らし</item>
        <item>学び</item>
        <item>テクノロジー</item>
        <item>おもしろ</item>
        <item>エンタメ</item>
        <item>アニメとゲーム</item>
    </string-array>

    <string-array name="categories">
        <item>0</item> <!-- All -->
        <item>301816409282464093</item> <!-- Social -->
        <item>300989576564947867</item> <!-- Economics -->
        <item>244148959988020477</item> <!-- Life -->
        <item>315890158150969179</item> <!-- knowledge -->
        <item>261248828312298389</item> <!-- IT -->
        <item>302115476506048236</item> <!-- fun -->
        <item>302115476501939948</item> <!-- Entertainment -->
        <item>297347994088281699</item> <!-- game -->
    </string-array>
</resources>
