<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuComment"
        android:icon="@drawable/ic_comment_24dp"
        android:title="@string/comment"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuBrightness"
        android:icon="@drawable/ic_brightness_medium_24dp"
        android:title="@string/brightness"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuBlockJs"
        android:title="@string/disable_javascript" />
    <item
        android:id="@+id/menuShare"
        android:title="@string/share_url" />
    <item
        android:id="@+id/menuOpenBrowser"
        android:title="@string/open_browser" />
</menu>
